FEC-1255: updated layout css to fix footer to bottom of view without overlapping other elements

--- a/front-end/src/app/layout/footer/footer.component.scss
+++ b/front-end/src/app/layout/footer/footer.component.scss
@@ -1,6 +1,7 @@
 footer {
   background-color: #d8d8d8;
   font-size: 0.8rem;
+  width: 100%;
 }
 
 footer label {
